# anitrack

./: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  _Dockerfile  _docker-compose.yml  auth.ts  build-all.py  build-nuitka-fast.py  bun.lockb  colors.ts  drizzle.config.ts  fly.toml  go.mod  go.sum  helpers.ts  hianime.html  index.ts  main.go  main.py  metrics.txt  middleware.ts  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  process_unix.go  progress-bar.ts  pyproject.toml  requirements.txt  search-sample-response.html  searchresults.html  sst.config.ts  tailwind.config.ts  tsconfig.json  turbo.json
anitrack/: __init__.py  main.py
api/: main.go
app/: globals.css  layout.tsx  page.tsx
components/: addReleaseDrawer.tsx  auth.tsx  header.tsx  newEpisodesSection.tsx  providers.tsx  releaseCard.tsx  signIn.tsx  signOut.tsx  themeSwitcher.tsx  trackedAnimesSection.tsx  trackedReleaseCard.tsx  watchHistory.tsx  watchedEpisodeCard.tsx
database/: migrate.ts  schema.ts
go-tui/: README.md  go.mod  go.sum  main.go  process_windows.go
lib/: db.ts
migrations/: 0000_romantic_joshua_kane.sql  0000_vengeful_ironclad.sql  0001_closed_trauma.sql  0002_jazzy_maria_hill.sql  0003_strong_hemingway.sql
migrator/: lambda.ts
nextjs-app/: README.md  package.json
py-tui/: main.py  pyproject.toml
rqbit/: README.md  hetzner-vps-setup.md  index.html
rust-tui/: Cargo.toml
supabase/: config.toml
torrent-api/: docker-compose.yaml  index.html
torrent-streamer/: .torrent.db-shm  .torrent.db-wal  go.mod  (+3 more)
torrent-streamer-api/: index.html
(+169 files in other folders)
