[project]
name = "anitrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "nuitka>=2.7.11",
    "pyinstaller>=6.14.2",
    "selectolax>=0.3.31",
    "textual-dev>=1.7.0",
    "textual[syntax]>=3.5.0",
]

[project.scripts]
anitrack = "anitrack.main:main"
