[package]
name = "anitrack"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
scraper = "0.23.1"
tokio = { version = "1.46.1", features = ["full"] }
